# EvoMemBench

./: .gitignore  README.md
Cross-Episode-Execution/Embodied-AI/CROSSEP-EMB/: README.md
Cross-Episode-Knowledge/CROSSEP-KNOW/: .gitignore  README.md  analyze_comparison_new.py  compute_stats.py  dataset_distribution.md  eval.py  extract_trajectories.py  generate_folder_difficulty_table.py  infer_context_memory.py  inspect_memory_samples.py  requirements.txt  run_context_memory.sh
EvoMemBench-Memory-Systems/: .gitignore  README.md
EvoMemBench-Memory-Systems/A-mem/: README.md  demo
EvoMemBench-Memory-Systems/MemOS/: README.md  pyproject.toml
EvoMemBench-Memory-Systems/MemoBrain/: CLAUDE.md  README.md  SETUP.md  run_server.sh  setup_env.sh
EvoMemBench-Memory-Systems/MemoBrain/src/: memobrain.py
EvoMemBench-Memory-Systems/MemoryOS/: .gitignore  README.md  pyproject.toml
EvoMemBench-Memory-Systems/MemoryOS/eval/: dynamic_update.py  evalution_loco.py  main_loco_parse.py  mid_term_memory.py  smoke_results.json  utils.py
EvoMemBench-Memory-Systems/MemoryOS/eval/mem_tmp_loco_final/: conv-26_long_term.json
EvoMemBench-Memory-Systems/MemoryOS/memoryos-playground/: test.py
EvoMemBench-Memory-Systems/MemoryOS/memoryos-pypi/: memoryos.py  updater.py  utils.py
EvoMemBench-Memory-Systems/memagent/: README.md  SETUP.md  download_model.sh  run_server.sh  setup_env.sh
In-Episode-Execution/INEP-EXEC/: README.md  run_bfcl_memobrain_server.sh  run_eval.sh  run_memobrain_server.sh  setup_bfclmemobrain_env.sh
In-Episode-Knowledge/INEP-KNOW/: README.md  requirements.txt
(+452 files in other folders)
