[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryos-pypi"
version = "1.0.0"
description = "MemoryOS: hierarchical memory system with short/mid/long-term tiers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24,<2.0",
    "sentence-transformers>=5.0.0",
    "transformers>=4.51.0",
    "FlagEmbedding>=1.2.9",
    "faiss-cpu>=1.7.0",
    "httpx[socks]",
    "openai",
    "typing-extensions>=4.0.0",
    "regex>=2022.1.18",
    "python-dotenv>=0.19.0",
]

[tool.setuptools]
packages = ["memoryos"]

[tool.setuptools.package-dir]
memoryos = "memoryos-pypi"
